--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,18 @@
+#设置微信小程序信息
 wechat.appid=wxb91290598bdfc745
 wechat.appSecret=d2ad06a7385ec65fd54f287848f29fda
+
+#设置数据库连接池基本信息
+spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/wechat?useSSL=false&useUnicode=true&characterEncoding=utf8
+spring.datasource.username=root
+spring.datasource.password=root
+spring.datasource.dbcp2.min-idle=5
+spring.datasource.dbcp2.initial-size=5
+spring.datasource.dbcp2.max-total=20
+spring.datasource.dbcp2.max-wait-millis=500
+
+#mybatis设置
+mybatis.config-location=classpath*:mybatis/mybatis.xml
+mybatis.mapper-locations=classpath*:mybatis/mapper/**/*.xml
