--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,7 @@ wechat.appSecret=d2ad06a7385ec65fd54f287848f29fda
 #设置数据库连接池基本信息
 spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/wechat?useSSL=false&useUnicode=true&characterEncoding=utf8
+spring.datasource.url=jdbc:mysql://192.168.91.187:3306/wechat?useSSL=false&useUnicode=true&characterEncoding=utf8
 spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.dbcp2.min-idle=5
